test/errors/error11.sp
%empty sort.
sorts
#s={f(a)}.
#s2={f(a)}+{a}.
#s1=#s-#s2. %s1 is empty
predicates
rules
